object_info improvement
